sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:3: error: not found: value i
  i=0
  ^AlgGnomeSort:4: error: not found: value i
  while(i!=getNombreValeurs()){
        ^AlgGnomeSort:5: error: not found: value i
    if(i=0){i=i+1}
       ^AlgGnomeSort:5: error: not found: value i
    if(i=0){i=i+1}
            ^AlgGnomeSort:6: error: not found: value i
    if(getValeur(i)>getValeur(i+1)){
                 ^AlgGnomeSort:6: error: not found: value i
    if(getValeur(i)>getValeur(i+1)){
                              ^AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:8: error: not found: value i
      i=i-1
      ^AlgGnomeSort:10: error: not found: value i
      i=i+1
      ^